# npy2pointcloud

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.ipynb
src/npy2pointcloud/: __init__.py  batch.py  cli.py  converter.py  loader.py
src/npy2pointcloud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_converter.py  test_loader.py
