[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npy2pointcloud"
version = "0.1.0"
description = "Convert Rohbau3D .npy point cloud files to standard formats (PLY, PCD, LAS)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "open3d>=0.17",
    "click>=8.0",
    "laspy[laszip]>=2.4",
]

[project.scripts]
npy2pointcloud = "npy2pointcloud.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
