[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npy2pointcloud"
version = "0.1.0"
description = "Convert Rohbau3D .npy point cloud files to standard formats (PLY, PCD, LAS)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ryohei Sasaki", email = "ryohei.sasaki@map4.jp"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.24",
    "open3d>=0.17",
    "click>=8.0",
    "laspy[laszip]>=2.4",
]

[project.urls]
Homepage = "https://github.com/rsasaki0109/npy2pointcloud"
Repository = "https://github.com/rsasaki0109/npy2pointcloud"
Issues = "https://github.com/rsasaki0109/npy2pointcloud/issues"

[project.scripts]
npy2pointcloud = "npy2pointcloud.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
